changing table in doctorSelect to be responsive. the app will now refresh when code is added/changed :-)

--- a/front-end-patient-app/package.json
+++ b/front-end-patient-app/package.json
@@ -5,7 +5,8 @@
     "main": "main.js",
     "devDependencies": {
         "electron": "^9.0.5",
-        "electron-packager": "^14.2.1"
+        "electron-packager": "^14.2.1",
+        "electron-reload": "^1.5.0"
     },
     "scripts": {
         "start": "electron ."
